Prevent Algorithm Container Wrap

--- a/server/public/style.css
+++ b/server/public/style.css
@@ -297,3 +297,12 @@ h4 {
 #algorithmsContainer > * {
     white-space: normal;
 }
+
+#algorithms {
+    white-space: nowrap;
+    overflow: auto;
+}
+
+#algorithms > * {
+    white-space: normal;
+}
